--- a/src/components/ui/toast.module.css
+++ b/src/components/ui/toast.module.css
@@ -26,6 +26,10 @@
   position: relative;
 }
 
+.toast.closable {
+  padding: 1rem;
+}
+
 .toast.exiting {
   animation: slideOut both 150ms ease-in-out;
 }
